--- a/index.html
+++ b/index.html
@@ -5,9 +5,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" href="assets/img/favicon.ico">
+
     <title>Science Fair</title>
+
+    <!-- HTML5 shiv and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Bootstrap CDN -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Font Awesome -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <body>
 
+      <!-- HEADER
+      ====================================================================== -->
+      <header>
+
+      </header>
+
+      <!-- HERO
+      ====================================================================== -->
+      <section>
+
+      </section>
+
+      <!-- OPT IN SECTION
+      ====================================================================== -->
+      <section>
+
+      </section>
+
+      <!-- OUR MISSION
+      ====================================================================== -->
+      <section>
+
+      </section>
+
+      <!-- WHO BENEFITS
+      ====================================================================== -->
+      <section>
+
+      </section>
+
+      <!-- PROJECT FEATURE
+      ====================================================================== -->
+      <section>
+
+      </section>
+
+      <!-- SAMPLE PROJECT VIDEO
+      ====================================================================== -->
+      <section>
+
+      </section>
+
+      <!-- TEAM
+      ====================================================================== -->
+      <section>
+
+      </section>
+
+      <!-- TESTIMONIALS
+      ====================================================================== -->
+      <section>
+
+      </section>
+
+      <!-- SIGN UP
+      ====================================================================== -->
+      <section>
+
+      </section>
+
+      <!-- FOOTER
+      ====================================================================== -->
+      <footer>
+
+      </footer>
+
+      <!-- MODAL
+      ====================================================================== -->
+      <div class="">
+
+      </div>
+
+      <!-- BOOTSTRAP CORE javascript
+           Placed at the end of the document so the pages
+           load faster!
+      ====================================================================== -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="assets/js/main.js"></script>
   </body>
 </html>
