--- a/index.html
+++ b/index.html
@@ -29,8 +29,38 @@
 
       <!-- HEADER
       ====================================================================== -->
-      <header>
+      <header class="site-header" role="banner">
 
+        <!-- NAVBAR
+        ====================================================================== -->
+        <div class="navbar-wrapper">
+          <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+              <div class="navbar-header">
+
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"><img scr="assets/img/logo.png" alt="Science Fair Online"></a>
+              </div><!-- nabar-header -->
+              <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="active"><a href='/'>Home</a></li>
+                  <li><a href='/'>About Us</a></li>
+                  <li><a href='/'>Student Profiles</a></li>
+                  <li><a href='/'>Abstracts</a></li>
+                  <li><a href='/'>Technique Videos</a></li>
+                  <li><a href='/'>Science Fairs</a></li>
+                  <li><a href='/'>Join Our Team</a></li>
+                  <li><a href='/'>Contact Us</a></li>
+                </ul><!-- nav -->
+              </div><!-- nabar-collapse -->
+            </div><!-- container-->
+          </div><!-- navbar -->
+        </div><!-- navbar wrapper-->
       </header>
 
       <!-- HERO
